--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="AI.h" />
     <ClInclude Include="gameMaster.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="QTableComponent.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -206,6 +207,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="QTableComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
