--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -209,6 +209,9 @@
     </ClCompile>
     <ClCompile Include="QTableComponent.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="NatvisFile.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
